--- a/src/scss/base/forms/select.scss
+++ b/src/scss/base/forms/select.scss
@@ -20,6 +20,10 @@
     width: 100%;
     border-radius: 60px;
     padding: 14.6px 20px;
+    
+    &_donate {
+      padding: 16px 20px;
+    }
   }
   // .select__value
   &__value {
