--- a/src/scss/base/popup.scss
+++ b/src/scss/base/popup.scss
@@ -1,5 +1,5 @@
 body::after {
-  content: '';
+  content: "";
   background-color: rgba(7, 3, 20, 0.96);
   position: fixed;
   width: 100%;
@@ -46,6 +46,7 @@ body::after {
   justify-content: center;
   align-items: center;
 }
+
 .popup__content {
   visibility: hidden;
   transform: scale(0);
@@ -63,13 +64,14 @@ body::after {
   border-radius: 24px;
   position: relative;
   &::before {
-    content: '';
+    content: "";
     position: absolute;
     inset: 0;
     border-radius: 24px;
     padding: 2px;
     background: linear-gradient(to top, #ff8125 -75%, rgba(0, 0, 0, 0) 50%) 74%;
-    -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+    -webkit-mask: linear-gradient(#fff 0 0) content-box,
+      linear-gradient(#fff 0 0);
     -webkit-mask-composite: xor;
     pointer-events: none;
   }
@@ -94,11 +96,22 @@ body::after {
   &.complaint {
     max-width: 460px;
   }
+  &_donate {
+    width: fit-content;
+    max-width: 656px;
+  }
+  &_share {
+    max-width: 720px;
+  }
 }
 
 .popup__title {
   font-weight: 600;
   font-size: 24px;
+  &_donate {
+    margin-bottom: 32px;
+    line-height: 32px;
+  }
 }
 
 .popup__close {
@@ -116,6 +129,26 @@ body::after {
 
 .popup {
   &__form {
+    &_donate {
+      display: flex;
+      justify-content: space-between;
+      gap: 16px;
+      margin-bottom: 32px;
+    }
+    &_share {
+      display: flex;
+      flex-direction: column;
+      gap: 32px;
+      margin-bottom: 32px;
+    }
+    &-error {
+      margin-top: 4px;
+      text-align: end;
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 20px;
+      color: #ff5353;
+    }
     &-item {
       margin-top: 16px;
       display: flex;
@@ -127,7 +160,7 @@ body::after {
       & label {
         font-weight: 500;
         font-size: 14px;
-        margin-bottom: 5px;
+        margin-bottom: none;
         opacity: 0.6;
         line-height: 20px;
       }
@@ -149,6 +182,34 @@ body::after {
         right: 20px;
         top: 50%;
         opacity: 0.4;
+      }
+      &_donate {
+        &-form-error {
+          & input {
+            border: 1px solid #ff5353;
+          }
+        }
+        & label {
+          opacity: 1;
+        }
+        width: 280px;
+        & input::placeholder {
+          opacity: 1;
+        }
+        &:first-child {
+          margin-top: 0;
+        }
+      }
+      &_share {
+        display: flex;
+        flex-direction: column;
+        margin-top: 0;
+        & input {
+          padding-right: 139px;
+        }
+        & button {
+          top: calc(50% + 2px);
+        }
       }
     }
     &-accept {
@@ -180,21 +241,34 @@ body::after {
   &__submit {
     margin: 32px 0;
     width: 100%;
+    &_donate-success {
+      width: 260px;
+      margin: 0;
+    }
   }
   &__image {
     margin-bottom: 20px;
+    &_donate-success {
+      margin-bottom: 16px;
+    }
   }
   &__info {
     text-align: center;
     line-height: 24px;
     font-weight: 600;
     font-size: 16px;
+    &_donate-success {
+      margin-bottom: 32px;
+    }
   }
   & hr {
     width: 100%;
     border-top: 1px solid #ffffff;
     opacity: 0.12;
     margin-top: 24px;
+  }
+  &__label {
+    margin-bottom: 4px;
   }
   &__footer {
     text-align: center;
@@ -235,9 +309,30 @@ body::after {
     margin-top: 45px;
     justify-content: flex-end;
     gap: 80px;
+
     & .btn-green {
       padding: 14px 23px;
+      &_donate {
+        padding: 15px 23px;
+      }
     }
+    &_donate {
+      margin-top: 0;
+      gap: 16px;
+      justify-content: space-between;
+    }
+    &-wrapper {
+      margin: auto auto;
+    }
+  }
+  &__social {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+    margin-bottom: 32px;
+  }
+  &__img-vk {
+    border-radius: 50%;
   }
 }
 
@@ -296,5 +391,34 @@ body::after {
   & hr,
   & .popup__footer-block {
     margin-top: 32px;
+  }
+}
+
+.popup__select {
+  margin-top: 0;
+  width: 280px;
+
+  & label {
+    opacity: 1;
+  }
+
+  & .select__options {
+    background: rgba(255, 255, 255, 0.2);
+    padding: 0;
+    margin-top: 20px;
+  }
+  & .select__title {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    border: 1px solid rgba(255, 255, 255, 0.08);
+    background: rgba(255, 255, 255, 0.05);
+    padding: 15px 20px;
+  }
+  & button {
+    position: relative;
+    right: 0;
+    top: 0;
+    opacity: 1;
   }
 }
